--- a/app.json
+++ b/app.json
@@ -6,24 +6,30 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/splashScreen.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#000000"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
+   
     "assetBundlePatterns": [
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.Parkirin",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+        "backgroundColor": "#000000"
+      },
+      "permissions": ["ACCESS_FINE_LOCATION","ACCESS_BACKGROUND_LOCATION"],
+      "package": "com.Parkirin",
+      "versionCode": 1,
+      "config": {"googleMaps": { "apiKey": "AIzaSyDy4YDcrHfTyCRV_IVjlBj8TvIkNLK3hVo" } }
+     
+      
     },
     "web": {
       "favicon": "./assets/favicon.png"
