--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,13 @@
 name: CI
-
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    - push
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - {uses: actions/checkout@v2.3.4}
+            - {name: 'Install Expo', run: 'sudo npm i -g expo-cli'}
+            - {name: 'Login to Expo', run: 'expo login -u shubham21 -p Shastri@1994'}
+            - {name: 'Install packages', run: 'sudo yarn'}
+           # - {name: 'Setup dotenv', run: 'mv env_dev .env'}
+            - {name: 'Build and publish project', run: 'expo publish'}
