--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,27 @@
-name: CI
-on:
-    - push
-jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-        
-            - uses: actions/setup-node@v2
-            - uses: actions/checkout@v2.3.4
-              with:
-                node-version: '14'
-        
-            - run: npm install
-            - run: npm test
-            - run: sudo npm i -g expo-cli
-            - run: expo login -u shubham21 -p Shastri@1994
-            - run: sudo yarn
-           # - {name: 'Setup dotenv', run: 'mv env_dev .env'}
-            - run: expo publish
+version: 0.2
+
+phases:
+
+    INSTALL:
+        runtime-versions:
+            nodejs: 10
+        commands:
+            - npm install
+
+
+    PRE_BUILD:
+      commands:
+        - npm install --quiet --global expo-cli
+        - >
+          if [ -f yarn.lock ]; then
+            yarn
+          elif [ -f package-lock.json ] || [ -f npm-shrinkwrap.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+    BUILD:
+      commands:
+        - expo build:android
+artifacts:
+    baseDirectory: android-build
