--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,10 +16,10 @@ phases:
       - expo --version
       - export EXPO_CLI_PASSWORD=$(aws ssm get-parameter --name "Shastri@1994" --region <ap-south-1> --query 'Parameter.Value' --output text)
       - npx expo login --non-interactive -u ${EXPO_USERNAME}
-  build:
-    commands:
-      - echo "Executing build"
-      - expo build:android -t apk
+ # build:
+  #  commands:
+   #   - echo "Executing build"
+   #   - expo build:android -t apk
  post_build:
     commands:
       - echo "publishing to expo default channel"
