--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,8 @@ phases:
      - echo "build complete"
   post_build:
     commands:
-      - expo login -u 'shubham21' -p 'Shastri@1994' 
+      - expo login -u 'shubham21' -p 'Shastri@1994'
+      - expo build:android 
       - echo "publishing to expo default channel"
       - npx expo publish --non-interactive
 
