--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,6 +27,6 @@ phases:
       - echo "publishing to expo default channel"
     #  - npx expo publish --non-interactive
 
-#artifacts:
- # files:
-  #  app/build/outputs/app-debug.apk
+artifacts:
+  files:
+    react-native/app-debug.apk
