--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build: 
     commands:
      - echo "Installing turtle"
-     - npm install -g turtle-cli
+     - sudo npm install -g turtle-cli --unsafe-perm
      - turtle --version	
      - echo "pre_build test phase started"
      - echo " unit test"
