--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build: 
     commands:
      - echo "Installing turtle"
-     - npm install -g turtle-cli gulp-cli expo-cli --unsafe-perm=true --allow-root
+     - npm install -g turtle-cli --unsafe-perm=true --allow-root
      - turtle --version	
      - echo "pre_build test phase started"
      - echo " unit test"
@@ -23,7 +23,7 @@ phases:
      - echo "build phase started..."
      #- npx expo login -u $(EXPO_CLI_USER) -p $(EXPO_CLI_PASSWORD) 
      #- npx expo login -u 'shubham21' -p 'Shastri@1994'
-     - turtle build:android
+     - turtle build:android --type apk
      #- expo build:android
      - echo "build complete"
   post_build:
