--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
   build:
     commands:  
      - apt-get update
-     - apt-get install openjdk-8-jdk
+     - apt-get install -y openjdk-8-jdk
      - echo "build phase started..."
      #- npx expo login -u $(EXPO_CLI_USER) -p $(EXPO_CLI_PASSWORD) 
      - turtle build:android 
