--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,8 @@ phases:
      - apt-get install -y openjdk-8-jre
      - update-alternatives --config java
      - update-alternatives --config javac
+     - java -version
+     - sudo update-alternatives --set java /usr/lib/jvm/jdk8_version/bin/java
      - echo "build phase started..."
      #- npx expo login -u $(EXPO_CLI_USER) -p $(EXPO_CLI_PASSWORD) 
      - turtle build:android 
