--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,7 +27,7 @@ phases:
      - update-alternatives --config java
      - update-alternatives --config javac
      - java -version
-     - sudo update-alternatives --set java /usr/lib/jvm/jdk8_version/bin/java
+     - update-alternatives --set java /usr/lib/jvm/jdk8_version/bin/java
      - echo "build phase started..."
      #- npx expo login -u $(EXPO_CLI_USER) -p $(EXPO_CLI_PASSWORD) 
      - turtle build:android 
