--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,20 +23,18 @@ phases:
 
   build:
     commands:  
-     - apt-get update
-     - apt-get install -y openjdk-8-jdk
-     - apt-get install -y openjdk-8-jre 
-     - update-alternatives --config java
-     - update-alternatives --config javac
-     - update-alternatives --set java $JAVA_8
-     - java -version
+     #- apt-get update
+     
+     #- apt-get install -y openjdk-8-jdk
+     #- apt-get install -y openjdk-8-jre 
+     #- update-alternatives --config java
+     #- update-alternatives --config javac
+     #- update-alternatives --set java $JAVA_8
+     #- java -version
      #- update-alternatives --set java /usr/lib/jvm/jdk8_version/bin/java
      - echo "build phase started..."
      #- npx expo login -u $(EXPO_CLI_USER) -p $(EXPO_CLI_PASSWORD) 
      - turtle build:android 
-         --keystore-path /home/shubham/Parkrin-App/Parkirin.jks
-         --keystore-alias QHNodWJoYW0yMS9QYXJraXJpbg==
-         --public-url https://127.0.0.1/dist/android-index.json -t apk
      - echo "build complete"
 
   post_build:
