--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,21 +3,21 @@ phases:
   install:
     commands:
      - echo "Installing phase started..."
-     - npm install 
-     - npm install -g turtle-cli
+     - yarn global add expo-cli
+     - yarn global add turtle-cli
+     - turtle -V
+     - yarn install
      - echo "install phase ended"
 
   pre_build: 
     commands:
-      - npm install
       - expo login --username sayeed99 --password Iamsocool@99
-      - expo publish
-      - expo fetch:android:keystore
   build:
     commands:  
-      - cp /usr/src/app/shExpoBuild/buildAndroid.sh ./buildAndroid.sh
-      - ./buildAndroid.sh b30f2c1e368f4237b9aa037ffcd1d4eb b121f416f3024a76bb065ec2b805160d sayeed99 Iamsocool@99 ./Parkirin.jks QHNheWVlZDk5L1Bhcmtpcmlu apk
-
+    - turtle setup:android --sdk-version $SDK_VERSION
+    - keytool -genkey -v -keystore ${KEYSTORE_PATH} -alias ${KEYSTORE_ALIAS} -keyalg RSA -keysize 2048 -validity 10000  -dname "cn=Tobias Benkner, ou=MyApp, o=BenknerIT, c=DE" -keypass ${EXPO_ANDROID_KEY_PASSWORD} -storepass ${EXPO_ANDROID_KEYSTORE_PASSWORD}
+    - keytool -list -keystore ${KEYSTORE_PATH} -storepass ${EXPO_ANDROID_KEYSTORE_PASSWORD}
+    - turtle build:android --type apk --keystore-path ${KEYSTORE_PATH} --keystore-alias ${KEYSTORE_ALIAS} --username sayeed99 --password Iamsocool@99 -o ${ARTIFACT_PATH}
   post_build:
     commands:
       - echo "Updating files to s3 bucket..."
@@ -26,4 +26,3 @@ artifacts:
   files:
     - '**/*'
   base-directory: build
-    
