--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,10 +12,10 @@ phases:
       - expo login --username sayeed99 --password Iamsocool@99
   build:
     commands:  
-    - rm debugstore.jks
-    - rm debug-keystore.jks
+    # - rm debugstore.jks
+    # - rm debug-keystore.jks
     - turtle setup:android --sdk-version $SDK_VERSION
-    - keytool -genkey -v -keystore ${KEYSTORE_PATH} -alias ${KEYSTORE_ALIAS} -keyalg RSA -keysize 2048 -validity 10000  -dname "cn=Tobias Benkner, ou=MyApp, o=BenknerIT, c=DE" -keypass ${EXPO_ANDROID_KEY_PASSWORD} -storepass ${EXPO_ANDROID_KEYSTORE_PASSWORD}
+    # - keytool -genkey -v -keystore ${KEYSTORE_PATH} -alias ${KEYSTORE_ALIAS} -keyalg RSA -keysize 2048 -validity 10000  -dname "cn=Tobias Benkner, ou=MyApp, o=BenknerIT, c=DE" -keypass ${EXPO_ANDROID_KEY_PASSWORD} -storepass ${EXPO_ANDROID_KEYSTORE_PASSWORD}
     - keytool -list -keystore ${KEYSTORE_PATH} -storepass ${EXPO_ANDROID_KEYSTORE_PASSWORD}
     - turtle build:android --type apk --keystore-path ${KEYSTORE_PATH} --keystore-alias ${KEYSTORE_ALIAS} --username sayeed99 --password Iamsocool@99 -o ${ARTIFACT_PATH}
   post_build:
