--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,12 +21,9 @@ phases:
 
   post_build:
     commands:
-      - echo "Updating files to s3 bucket..."
-      - >
-        aws s3 cp --acl public-read 
-        --cache-control="max-age=0, no-cache, no-store, must-revalidate" 
-        ./build/service-worker.js s3://react-native-1/ 
-      - aws s3 cp --recursive --acl public-read ./build s3://react-native-1/
+      - echo "Updating files to s3 bucket..." 
+#      - aws s3 cp --recursive --acl public-read ./build s3://react-native-1/
+      - aws s3 cp codebuild/output/src629085599/src/github.com/shubham-2101/Parkrin-App/"app.apk s3://react-native-1/
 
 artifacts:
   files:
