--- a/buildspec.yml
+++ b/buildspec.yml
@@ -23,9 +23,9 @@ phases:
     commands:
       - echo "Updating files to s3 bucket..." 
 #      - aws s3 cp --recursive --acl public-read ./build s3://react-native-1/
-     # - aws s3 cp shubham-2101/Parkrin-App/"app.apk s3://react-native-1/
+      - aws s3 cp "app.apk s3://$S3_BUCKET/app.apk
 
-artifacts:
-  files:
-    - '**/*'
-  base-directory: build
+#artifacts:
+ # files:
+  #  - '**/*'
+  #base-directory: build
